fixed styling on mobile device

--- a/src/pages/Explore.css
+++ b/src/pages/Explore.css
@@ -130,24 +130,34 @@ body {
 }
 
 @media (max-width: 480px) {
+  .subHeader {
+    display: flex;
+    flex-direction: column;
+  }
   .subHeader h1 {
     left: 0;
-    font-size: 1.2rem;
+    font-size: 2rem;
     padding-right: 4px;
   }
 
   .dogList {
     grid-template-columns: 1fr;
+    padding: 5px;
+    width: 100%;
+    margin: auto;
   }
 
   .dogItem h2 {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 
   .dogItem p {
     font-size: 0.7rem;
   }
-
+  .dogImage {
+    width: 100%;
+    height: 250px;
+  }
   .footer {
     font-size: 0.8rem;
     padding: 10px;
